# century-ring

./: .gitignore  Cargo.toml  README.rst  pyproject.toml
docs/source/: conf.py  index.rst  sync-api.rst  uring_concepts.rst
docs/source/_static/: custom.css
pysrc/century_ring/: __init__.py  _century_ring.pyi  files.py  handle.py  helpers.py  ring.py  wrappers.py
pysrc/century_ring/aio/: manager.py  sidecar.py  trio.py
src/: files.rs  flags.rs  lib.rs  network.rs  ring.rs  shared.rs
tests/: __init__.py  test_eventfd.py  test_file_io.py  test_handles.py  test_misc.py  test_network.py  test_ring.py  test_safety.py
tests/aio/: test_sidecar.py
