[package]
name = "century-ring"
version = "0.1.0"
edition = "2021"

[lib]
name = "century_ring"
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "=1.21.0" }
io-uring = { version = "=0.7.3" }
nix = { version = "=0.29.0", features = ["socket", "net"]}
procfs = { version = "=0.17.0" }
pyo3 = { version = "=0.23.4" }
